SW-12 Updated apis generator

--- a/generators/app/templates/Dockerfile
+++ b/generators/app/templates/Dockerfile
@@ -1,25 +1,20 @@
-# Basic install of exo-docker
-#
-# Currently install exo-docker
+FROM node:6.9-alpine
 
-FROM node:latest
-MAINTAINER Martin Adolfi
+RUN apk add --update git && rm -rf /tmp/* /var/cache/apk/*
 
-RUN apt-get update -y \
- && apt-get install -y git \
- && apt-get clean \
- && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-RUN npm config set registry http://registry.npmjs.org \
- && npm cache clean
+RUN npm config set registry http://registry.npmjs.org && npm cache clean
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-RUN touch .env
 
 COPY package.json /usr/src/app/
-RUN npm install \
- && npm cache clean
+
+RUN npm install --unsafe-perm && npm cache clean
+
 COPY . /usr/src/app
+
+RUN rm -rf .env && touch .env
+
+EXPOSE 3000
 
 CMD [ "npm", "start" ]
